# kleine

./: CMakeLists.txt  CMakePresets.json  README.md  kleine.cpp  kleine.h
.github/workflows/: cmake-multi-platform.yml
include/: DX7.k  Mini.k  PingPong.k  SuperSaw.k  klang.h
include/klang/: audio.h  midi.h  tests.h
